# edge-contraction-algorithm-research

./: LICENSE  Readme.md  alg_all.py  distribution_category.py  mean_results.py  percentage_improvement.py  plot_single_op.py  random_category.py  requirements.txt  test.py
experiment_result/graph/CGJ/result_random_subclass_coh/: random_subclass_improvement_summary.csv
experiment_result/graph/LGJ/result_random_subclass_lookahead/: random_subclass_improvement_summary.csv
experiment_result/graph/UGJ/result_random_subclass_unified/: random_subclass_improvement_summary.csv
experiment_result/mean/CGJ/mean_results_agg/: mean_comparison.csv
experiment_result/mean/CGJ/mean_results_agg_knott/: mean_comparison.csv
experiment_result/mean/CGJ/mean_results_coh/: category_mean_instance_improvement.csv  mean_comparison.csv
experiment_result/mean/CGJ/mean_results_coh_sparse/: category_mean_instance_improvement.csv  mean_comparison.csv
experiment_result/mean/LGJ/mean_results_best/: category_mean_instance_improvement.csv  mean_comparison.csv
experiment_result/mean/LGJ/mean_results_lookahead/: category_mean_instance_improvement.csv  mean_comparison.csv
experiment_result/mean/LGJ/mean_results_lookahead_sparse/: category_mean_instance_improvement.csv  mean_comparison.csv
experiment_result/mean/LGJ/mean_results_sparse_best/: mean_comparison.csv
greedy-joining/: CMakeLists.txt  Readme.md  pyproject.toml  python-interface.cxx
greedy-joining/include/: greedy-joining-cohesion.hxx  greedy-joining-lookahead.hxx  greedy-joining-uniform.hxx  greedy-joining.hxx
(+4333 files in other folders)
